--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   intl: ^0.19.0
   url_launcher: ^6.3.0
   shared_preferences: ^2.3.2
+  dart_sentiment: ^0.0.9
 
 dev_dependencies:
   flutter_test:
